# unsafe-server

./: README.md  pyproject.toml
tests/: test_unsafe_server.py
unsafe_server/: __init__.py  main.py
unsafe_server/models/: item.py  user.py
unsafe_server/routes/api/v1/: __init__.py  items.py  users.py
