[tool.poetry]
name = "unsafe-server"
version = "0.1.0"
description = ""
authors = ["Edgar Albalate <dev.gardo@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
falcon = "^2.0.0"
falcon-openapi = "^0.5.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
black = "^20.8b1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
